--- a/desktop.ini
+++ b/desktop.ini
@@ -1,6 +1,7 @@
 [.ShellClassInfo]
-IconResource=C:\WINDOWS\System32\SHELL32.dll,13
+IconResource=C:\Users\Admin\Desktop\gabrielavelitch\assets\images\favicon-96x96.ico,0
 [ViewState]
 Mode=
 Vid=
 FolderType=Generic
+Logo=C:\Users\Admin\Desktop\gabrielavelitch\assets\images\favicon-96x96.ico
